--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <title>Портфоліо</title>
   </head>
   <body>
