--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="page-header">
       <nav class="nav">
         <!-- Logo -->
-        <a href="./index.html" class="logo-header"
+        <a class="logo" href="./index.html" class="logo-header"
           ><span class="span-header">WEB</span>STUDIO</a
         >
         <!-- Menu Nav -->
@@ -48,10 +48,7 @@
     <main>
       <!-- Hero Image -->
       <section class="hero">
-        <h1 class="hero-title">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="orderservice">
           <span class="order-service-text">Order Service</span>
         </button>
