--- a/portfolio.html
+++ b/portfolio.html
@@ -10,198 +10,212 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+
     <title>Портфоліо</title>
   </head>
   <body>
     <!-- Top Line -->
 
-    <header class="page-header">
-      <nav class="nav">
-        <!-- Logo -->
-        <a href="./index.html" class="logo-header"
-          ><span class="span-header">WEB</span>STUDIO</a
-        >
-        <!-- Menu Nav -->
-        <ul class="menu-nav">
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-link" href="#">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="mail-tel">
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header main-nav">
+      <div class="container main-nav">
+        <nav class="nav main-nav">
+          <!-- Logo -->
+          <a href="./index.html" class="logo-header"
+            ><span class="span-header">WEB</span>STUDIO</a
+          >
+          <!-- Menu Nav -->
+          <ul class="menu-nav main-nav">
+            <li class="nav-title">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-title">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-title"><a class="nav-link" href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="adress-nav">
+          <ul class="mail-tel main-nav">
+            <li class="nav-title">
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="nav-title">
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Filters -->
 
     <main>
       <section>
-        <h1 class="hidden">Filters</h1>
-        <ul class="filters">
-          <li>
-            <button type="button" class="button-all">All</button>
-          </li>
-          <li>
-            <button type="button" class="button-all">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="button-all">App</button>
-          </li>
-          <li>
-            <button type="button" class="button-all">Design</button>
-          </li>
-          <li>
-            <button type="button" class="button-all">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="hidden">Filters</h1>
+          <ul class="filters">
+            <li class="btn">
+              <button type="button" class="button-all">All</button>
+            </li>
+            <li class="btn">
+              <button type="button" class="button-all">Web Site</button>
+            </li>
+            <li class="btn">
+              <button type="button" class="button-all">App</button>
+            </li>
+            <li class="btn">
+              <button type="button" class="button-all">Design</button>
+            </li>
+            <li class="btn">
+              <button type="button" class="button-all">Marketing</button>
+            </li>
+          </ul>
 
-        <!-- Row 1 -->
-
-        <!-- Project Card 1 -->
-
-        <ul class="row1">
-          <li>
-            <img
-              src="./images/bankapp.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Banking App Interface Concept</h3>
-            <p class="section-text">App</p>
-          </li>
-
-          <!-- Project Card 1.2 -->
-
-          <li>
-            <img
-              src="./images/cashlesspayment.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-
-          <!-- Project Card 1.3 -->
-
-          <li>
-            <img
-              src="./images/mediationapp.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Meditaion App</h3>
-            <p class="section-text">App</p>
-          </li>
-
-          <!-- Project Card 2 -->
-
-          <li>
-            <img
-              src="./images/taxiservice.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-
-          <!-- Project Card 2.1-->
-
-          <li>
-            <img
-              src="./images/screenillustrations.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-
-          <!-- Project Card 2.2 -->
-
-          <li>
-            <img
-              src="./images/onlinecaourses.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
+          <!-- Row 1 -->
 
           <!-- Project Card 1 -->
 
-          <li>
-            <img
-              src="./images/instagramstoriesconcept.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Instagram Stories Concept</h3>
-            <p class="section-text">Design</p>
-          </li>
+          <ul class="row1">
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/bankapp.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Banking App Interface Concept</h3>
+              <p class="section-text">App</p>
+            </li>
 
-          <!-- Project Card 2 -->
+            <!-- Project Card 1.2 -->
 
-          <li>
-            <img
-              src="./images/organicfood.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Organic Food</h3>
-            <p class="section-text">Web Site</p>
-          </li>
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/cashlesspayment.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
 
-          <!-- Project Card 3 -->
+            <!-- Project Card 1.3 -->
 
-          <li>
-            <img
-              src="./images/freshcoffee.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Fresh Coffee</h3>
-            <p class="section-text">Web Site</p>
-          </li>
-        </ul>
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/mediationapp.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Meditaion App</h3>
+              <p class="section-text">App</p>
+            </li>
+
+            <!-- Project Card 2 -->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/taxiservice.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+
+            <!-- Project Card 2.1-->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/screenillustrations.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+
+            <!-- Project Card 2.2 -->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/onlinecaourses.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+
+            <!-- Project Card 1 -->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/instagramstoriesconcept.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Instagram Stories Concept</h3>
+              <p class="section-text">Design</p>
+            </li>
+
+            <!-- Project Card 2 -->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/organicfood.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Organic Food</h3>
+              <p class="section-text">Web Site</p>
+            </li>
+
+            <!-- Project Card 3 -->
+
+            <li class="project-card">
+              <img class="profect-card-photo"
+                src="./images/freshcoffee.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Fresh Coffee</h3>
+              <p class="section-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer-background">
-      <a href="./index.html" class="logo-footer"
-        ><span class="span-footer">WEB</span>STUDIO</a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo-footer"
+          ><span class="span-footer">WEB</span>STUDIO</a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
