--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Banking App Interface Concept</h3>
-              <p class="section-text">App</p>
+              <div class="border">
+                <h3 class="section-title">Banking App Interface Concept</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
 
             <!-- Project Card 1.2 -->
