--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <!-- Section 1 -->
 
-      <section class="fetaure-section">
+      <section class="feature-section">
         <div class="container">
           <!-- Feature 1 -->
           <h2 class="hidden">Feature</h2>
@@ -117,7 +117,7 @@
 
       <!-- Section 2 -->
 
-      <section>
+      <section class="feature-section section">
         <div class="container">
           <h2 class="section-title2">What are we doing</h2>
 
@@ -152,7 +152,7 @@
 
       <!-- Section 3 -->
 
-      <section class="ourteam">
+      <section class="ourteam section">
         <div class="container">
           <h2 class="section-title2">Our Team</h2>
 
