--- a/portfolio.html
+++ b/portfolio.html
@@ -107,8 +107,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <div class="border">
+                <h3 class="section-title">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
 
             <!-- Project Card 1.3 -->
@@ -120,8 +122,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Meditaion App</h3>
-              <p class="section-text">App</p>
+              <div class="border">
+                <h3 class="section-title">Meditaion App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
 
             <!-- Project Card 2 -->
@@ -133,8 +137,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <div class="border">
+                <h3 class="section-title">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
 
             <!-- Project Card 2.1-->
@@ -146,8 +152,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <div class="border">
+                <h3 class="section-title">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
 
             <!-- Project Card 2.2 -->
@@ -159,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <div class="border">
+                <h3 class="section-title">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
 
             <!-- Project Card 1 -->
@@ -172,8 +182,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Instagram Stories Concept</h3>
-              <p class="section-text">Design</p>
+              <div class="border">
+                <h3 class="section-title">Instagram Stories Concept</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
 
             <!-- Project Card 2 -->
@@ -185,8 +197,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Organic Food</h3>
-              <p class="section-text">Web Site</p>
+              <div class="border">
+                <h3 class="section-title">Organic Food</h3>
+                <p class="section-text">Web Site</p>
+              </div>
             </li>
 
             <!-- Project Card 3 -->
@@ -198,8 +212,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Fresh Coffee</h3>
-              <p class="section-text">Web Site</p>
+              <div class="border">
+                <h3 class="section-title">Fresh Coffee</h3>
+                <p class="section-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
