--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <!-- Filters -->
 
     <main>
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h1 class="hidden">Filters</h1>
           <ul class="filters">
@@ -84,7 +84,7 @@
 
           <!-- Project Card 1 -->
 
-          <ul class="row1">
+          <ul class="portfolio-cards">
             <li class="project-card">
               <img class="profect-card-photo"
                 src="./images/bankapp.jpg"
@@ -93,8 +93,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Banking App Interface Concept</h3>
-                <p class="section-text">App</p>
+                <h2 class="section-title-portfolio">Banking App Interface Concept</h2>
+                <p class="section-text-portfolio">App</p>
               </div>
             </li>
 
@@ -108,8 +108,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Cashless Payment</h3>
-                <p class="section-text">Marketing</p>
+                <h2 class="section-title-portfolio">Cashless Payment</h2>
+                <p class="section-text-portfolio">Marketing</p>
               </div>
             </li>
 
@@ -123,8 +123,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Meditaion App</h3>
-                <p class="section-text">App</p>
+                <h2 class="section-title-portfolio">Meditaion App</h2>
+                <p class="section-text-portfolio">App</p>
               </div>
             </li>
 
@@ -138,8 +138,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Taxi Service</h3>
-                <p class="section-text">Marketing</p>
+                <h2 class="section-title-portfolio">Taxi Service</h2>
+                <p class="section-text-portfolio">Marketing</p>
               </div>
             </li>
 
@@ -153,8 +153,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Screen Illustrations</h3>
-                <p class="section-text">Design</p>
+                <h2 class="section-title-portfolio">Screen Illustrations</h2>
+                <p class="section-text-portfolio">Design</p>
               </div>
             </li>
 
@@ -168,8 +168,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Online Courses</h3>
-                <p class="section-text">Marketing</p>
+                <h2 class="section-title-portfolio">Online Courses</h2>
+                <p class="section-text-portfolio">Marketing</p>
               </div>
             </li>
 
@@ -183,8 +183,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Instagram Stories Concept</h3>
-                <p class="section-text">Design</p>
+                <h2 class="section-title-portfolio">Instagram Stories Concept</h2>
+                <p class="section-text-portfolio">Design</p>
               </div>
             </li>
 
@@ -198,8 +198,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Organic Food</h3>
-                <p class="section-text">Web Site</p>
+                <h2 class="section-title-portfolio">Organic Food</h2>
+                <p class="section-text-portfolio">Web Site</p>
               </div>
             </li>
 
@@ -213,8 +213,8 @@
                 height="300"
               />
               <div class="border">
-                <h3 class="section-title">Fresh Coffee</h3>
-                <p class="section-text">Web Site</p>
+                <h2 class="section-title-portfolio">Fresh Coffee</h2>
+                <p class="section-text-portfolio">Web Site</p>
               </div>
             </li>
           </ul>
@@ -224,7 +224,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer-background">
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo-footer"
           ><span class="span-footer">WEB</span>STUDIO</a
