--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Top Line -->
-    <header class="page-header main-nav">
+    <header class="page-header">
       <div class="container main-nav">
         <nav class="nav main-nav">
           <!-- Logo -->
@@ -58,11 +58,10 @@
       <!-- Hero Image -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">
-            Effective Solutions <br />
-            for Your Business
-          </h1>
-          <button type="button" class="orderservice">Order Service</button>
+          <div class="hero-item">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="orderservice">Order Service</button>
+          </div>
         </div>
       </section>
 
@@ -117,12 +116,12 @@
 
       <!-- Section 2 -->
 
-      <section class="feature-section section">
+      <section class="section">
         <div class="container">
-          <h2 class="section-title2">What are we doing</h2>
+          <h2 class="title">What are we doing</h2>
 
-          <ul class="section2">
-            <li class="section2photo">
+          <ul class="information-list">
+            <li class="information-item">
               <img
                 src="./images/image1.jpg"
                 alt="pc screen with statistics data"
@@ -130,7 +129,7 @@
                 height="300"
               />
             </li>
-            <li class="section2photo">
+            <li class="information-item">
               <img
                 src="./images/image2.jpg"
                 alt="smartphone with text massenger and its functions"
@@ -138,7 +137,7 @@
                 height="300"
               />
             </li>
-            <li class="section2photo">
+            <li class="information-item">
               <img
                 src="./images/image3.jpg"
                 alt="smartphone with app which recommend you where to go this summer for a vacation"
@@ -154,10 +153,10 @@
 
       <section class="ourteam section">
         <div class="container">
-          <h2 class="section-title2">Our Team</h2>
+          <h2 class="title">Our Team</h2>
 
           <!-- Team Card 1 -->
-          <ul class="section3">
+          <ul class="team-list">
             <li class="team-card">
               <img
                 class="team-card-photo"
@@ -166,8 +165,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-card-text">
+                <h3 class="section-title">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
 
             <!-- Team Card 2 -->
@@ -180,8 +181,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-card-text">
+                <h3 class="section-title">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
 
             <!-- Team Card 3 -->
@@ -194,8 +197,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-card-text">
+                <h3 class="section-title">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
 
             <!-- Team Card 4 -->
@@ -208,8 +213,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-card-text">
+                <h3 class="section-title">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -218,7 +225,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer-background">
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo-footer"
           ><span class="span-footer">WEB</span>STUDIO</a
