--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
 
-    <title>Студія</title>
+    <title>Studio</title>
   </head>
   <body>
     <!-- Top Line -->
