--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
 
-    <title>Портфоліо</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <!-- Top Line -->
